err/kolibri-exercise-perseus-plugin.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/kolibri_exercise_perseus_plugin'...
Listing './lib/python3.5/site-packages/kolibri_exercise_perseus_plugin/build'...
Listing './lib/python3.5/site-packages/kolibri_exercise_perseus_plugin/locale'...
Listing './lib/python3.5/site-packages/kolibri_exercise_perseus_plugin/locale/ar'...
Listing './lib/python3.5/site-packages/kolibri_exercise_perseus_plugin/locale/ar/LC_FRONTEND_MESSAGES'...
Listing './lib/python3.5/site-packages/kolibri_exercise_perseus_plugin/locale/en'...
Listing './lib/python3.5/site-packages/kolibri_exercise_perseus_plugin/locale/en/LC_FRONTEND_MESSAGES'...
Listing './lib/python3.5/site-packages/kolibri_exercise_perseus_plugin/locale/es_ES'...
Listing './lib/python3.5/site-packages/kolibri_exercise_perseus_plugin/locale/es_ES/LC_FRONTEND_MESSAGES'...
Listing './lib/python3.5/site-packages/kolibri_exercise_perseus_plugin/locale/es_MX'...
Listing './lib/python3.5/site-packages/kolibri_exercise_perseus_plugin/locale/es_MX/LC_FRONTEND_MESSAGES'...
Listing './lib/python3.5/site-packages/kolibri_exercise_perseus_plugin/locale/fa'...
Listing './lib/python3.5/site-packages/kolibri_exercise_perseus_plugin/locale/fa/LC_FRONTEND_MESSAGES'...
Listing './lib/python3.5/site-packages/kolibri_exercise_perseus_plugin/locale/fr_FR'...
Listing './lib/python3.5/site-packages/kolibri_exercise_perseus_plugin/locale/fr_FR/LC_FRONTEND_MESSAGES'...
Listing './lib/python3.5/site-packages/kolibri_exercise_perseus_plugin/locale/hi_IN'...
Listing './lib/python3.5/site-packages/kolibri_exercise_perseus_plugin/locale/hi_IN/LC_FRONTEND_MESSAGES'...
Listing './lib/python3.5/site-packages/kolibri_exercise_perseus_plugin/locale/pt_PT'...
Listing './lib/python3.5/site-packages/kolibri_exercise_perseus_plugin/locale/pt_PT/LC_FRONTEND_MESSAGES'...
Listing './lib/python3.5/site-packages/kolibri_exercise_perseus_plugin/locale/sw_TZ'...
Listing './lib/python3.5/site-packages/kolibri_exercise_perseus_plugin/locale/sw_TZ/LC_FRONTEND_MESSAGES'...
Listing './lib/python3.5/site-packages/kolibri_exercise_perseus_plugin/locale/ur_PK'...
Listing './lib/python3.5/site-packages/kolibri_exercise_perseus_plugin/locale/ur_PK/LC_FRONTEND_MESSAGES'...
Listing './lib/python3.5/site-packages/kolibri_exercise_perseus_plugin/static'...
Listing './lib/python3.5/site-packages/kolibri_exercise_perseus_plugin/static/exercise_perseus_render_module'...
Listing './lib/python3.5/site-packages/kolibri_exercise_perseus_plugin/static/fonts'...
Listing './lib/python3.5/site-packages/kolibri_exercise_perseus_plugin/static/mathjax'...
Listing './lib/python3.5/site-packages/kolibri_exercise_perseus_plugin/static/mathjax/2.1'...
Listing './lib/python3.5/site-packages/kolibri_exercise_perseus_plugin/static/mathjax/2.1/config'...
Listing './lib/python3.5/site-packages/kolibri_exercise_perseus_plugin/static/mathjax/2.1/fonts'...
Listing './lib/python3.5/site-packages/kolibri_exercise_perseus_plugin/static/mathjax/2.1/fonts/HTML-CSS'...
Listing './lib/python3.5/site-packages/kolibri_exercise_perseus_plugin/static/mathjax/2.1/fonts/HTML-CSS/TeX'...
Listing './lib/python3.5/site-packages/kolibri_exercise_perseus_plugin/static/mathjax/2.1/images'...
Listing './lib/python3.5/site-packages/kolibri_exercise_perseus_plugin/static/mathjax/2.1/jax'...
Listing './lib/python3.5/site-packages/kolibri_exercise_perseus_plugin/static/mathjax/2.1/jax/element'...
Listing './lib/python3.5/site-packages/kolibri_exercise_perseus_plugin/static/mathjax/2.1/jax/element/mml'...
Listing './lib/python3.5/site-packages/kolibri_exercise_perseus_plugin/static/mathjax/2.1/jax/output'...
Listing './lib/python3.5/site-packages/kolibri_exercise_perseus_plugin/static/mathjax/2.1/jax/output/HTML-CSS'...
Compiling './lib/python3.5/site-packages/kolibri_exercise_perseus_plugin/static/mathjax/kathjax.py'...
***   File "./lib/python3.5/site-packages/kolibri_exercise_perseus_plugin/static/mathjax/kathjax.py", line 32
    print "%s exists, exiting" % mjdir
                             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/kolibri_exercise_perseus_plugin-0.7.4.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
